--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,8 +25,12 @@ URL: https://github.com/mrc-ide/helios, https://mrc-ide.github.io/helios/
 Encoding: UTF-8
 LazyData: true
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: 
     individual
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
+VignetteBuilder: knitr
