--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,8 @@
 pandoc: 3.1.1
 pkgdown: 2.0.7
 pkgdown_sha: ~
-articles: {}
-last_built: 2024-04-04T10:46Z
+articles:
+  helios: helios.html
+  model: model.html
+last_built: 2024-04-04T11:44Z
 
