Pushing run_simulation() changes to a new branch recently branched from main to avoid compatability issues. Removed add_event_listeners() from run_simulation() and added documentation for the function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(generate_initial_leisure)
 export(generate_initial_schools)
 export(generate_initial_workplaces)
 export(get_parameters)
+export(run_simulation)
 export(sample_log_normal)
 export(sample_negbinom)
 export(sample_offset_truncated_power_distribution)
