devtools document commit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(create_EI_process)
 export(create_IR_process)
+export(create_RS_process)
 export(create_SE_process)
 export(create_events)
 export(create_processes)
@@ -9,6 +10,7 @@ export(create_variables)
 export(generate_initial_age_classes)
 export(generate_initial_disease_states)
 export(generate_initial_households)
+export(generate_initial_households_boostrap)
 export(generate_initial_leisure)
 export(generate_initial_schools)
 export(generate_initial_workplaces)
