--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,3 +19,4 @@ export(run_simulation)
 export(sample_log_normal)
 export(sample_negbinom)
 export(sample_offset_truncated_power_distribution)
+export(set_uvc)
