--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -4,5 +4,8 @@ pkgdown_sha: ~
 articles:
   helios: helios.html
   model: model.html
-last_built: 2024-04-15T10:49Z
+last_built: 2024-04-15T13:34Z
+urls:
+  reference: https://mrc-ide.github.io/helios/reference
+  article: https://mrc-ide.github.io/helios/articles
 
