- created the generate_far_uvc_switches() function to wrap these steps into something neater in create_variables() (stored in interventions.R) - created a version of create_variables() that implementes generate_far_uvc_switches() - wrote documentation for generate_far_uvc_switches() - improved the documentation for set_uvc()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(create_SE_process)
 export(create_events)
 export(create_processes)
 export(create_variables)
+export(generate_far_uvc_switches)
 export(generate_initial_age_classes)
 export(generate_initial_disease_states)
 export(generate_initial_households)
