--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -23,3 +23,9 @@ reference:
 - title: Data
   contents:
   - has_concept("data")
+- title: Intervention
+  contents:
+  - has_concept("intervention")
+- title: Miscellaneous
+  contents:
+  - has_concept("miscellaneous")
