--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,9 +2,10 @@ pandoc: 3.1.1
 pkgdown: 2.0.7
 pkgdown_sha: ~
 articles:
+  blueprint-1: blueprint-1.html
   helios: helios.html
   model: model.html
-last_built: 2024-04-17T13:44Z
+last_built: 2024-05-17T10:17Z
 urls:
   reference: https://mrc-ide.github.io/helios/reference
   article: https://mrc-ide.github.io/helios/articles
