--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(generate_initial_workplaces)
 export(get_parameters)
 export(get_setting_sizes)
 export(run_simulation)
+export(run_simulations_from_table)
 export(sample_log_normal)
 export(sample_negbinom)
 export(sample_offset_truncated_power_distribution)
