--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,8 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: 
-    individual
+    individual,
+    dplyr
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 VignetteBuilder: knitr
