Change get_setting_sizes function to get_setting_size

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,7 +19,7 @@ export(generate_initial_schools)
 export(generate_initial_schools_bootstrap)
 export(generate_initial_workplaces)
 export(get_parameters)
-export(get_setting_sizes)
+export(get_setting_size)
 export(run_simulation)
 export(run_simulations_from_table)
 export(sample_log_normal)
