Add option for random with specified proportion of individuals, and document

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(generate_initial_leisure)
 export(generate_initial_schools)
 export(generate_initial_schools_bootstrap)
 export(generate_initial_workplaces)
+export(generate_setting_far_uvc_switches)
 export(get_parameters)
 export(get_setting_size)
 export(run_simulation)
