--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,8 @@ Suggests:
 Config/testthat/edition: 3
 Imports: 
     individual,
-    dplyr
+    dplyr,
+    EnvStats
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 VignetteBuilder: knitr
