--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,4 +25,5 @@ export(run_simulations_from_table)
 export(sample_log_normal)
 export(sample_negbinom)
 export(sample_offset_truncated_power_distribution)
+export(set_setting_specific_risk)
 export(set_uvc)
