--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,12 +1,12 @@
-pandoc: 3.1.1
-pkgdown: 2.0.7
+pandoc: 3.1.11
+pkgdown: 2.1.0
 pkgdown_sha: ~
 articles:
+  blueprint-july: blueprint-july.html
   blueprint: blueprint.html
   helios: helios.html
   model: model.html
-last_built: 2024-05-21T09:56Z
+last_built: 2024-07-29T13:17Z
 urls:
   reference: https://mrc-ide.github.io/helios/reference
   article: https://mrc-ide.github.io/helios/articles
-
