--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,13 +33,11 @@ Config/testthat/edition: 3
 Imports: 
     individual,
     dplyr,
-    EnvStats,
-    Rcpp
+    EnvStats
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
 LinkingTo: 
-    Rcpp,
     individual
