--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,6 +34,8 @@ Imports:
     individual,
     dplyr,
     EnvStats
+Remotes:
+    mrc-ide/individual@feat/logi_size
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 VignetteBuilder: knitr
