--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,6 +2,7 @@ pandoc: 3.1.11
 pkgdown: 2.0.9
 pkgdown_sha: ~
 articles:
+  blueprint-final-report: blueprint-final-report.html
   blueprint-july: blueprint-july.html
   blueprint: blueprint.html
   helios: helios.html
