--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,8 @@ Config/testthat/edition: 3
 Imports: 
     individual,
     dplyr,
-    EnvStats
+    EnvStats,
+    dqrng
 Remotes:
     mrc-ide/individual@feat/logi_size
 Roxygen: list(markdown = TRUE)
