--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -19,7 +19,7 @@ navbar:
         href: articles/blueprint.html
       - text: Update to "Assessing far UVC interventions with an individual based infectious disease model"
         href: articles/blueprint-july.html
-      - text: Final Report: The Impact of Far UVC Interventions on the Burden of a Respiratory Virus
+      - text: Final Report The Impact of Far UVC Interventions on the Burden of a Respiratory Virus
         href: articles/blueprint-final-report.html
 
 reference:
